--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
 		"strict": true,
 		"target": "ES2022"
 	},
-	"include": ["src"]
+	"ts-node": {
+		"esm": true
+	},
+	"include": ["src"],
+	"exclude": ["node_modules"]
 }
