--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
 		"strict": true,
 		"target": "ES2022"
 	},
+	"exclude": ["node_modules"],
+	"include": ["src"],
 	"ts-node": {
 		"esm": true
-	},
-	"include": ["src"],
-	"exclude": ["node_modules"]
+	}
 }
