--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://unpkg.com/knip@next/schema.json",
+	"$schema": "https://unpkg.com/knip@latest/schema.json",
 	"entry": ["src/index.ts!", "script/*e2e.js"],
 	"ignore": ["./src/**/*.*"],
 	"ignoreBinaries": ["dedupe", "gh"],
